# syn-performance

./: Cargo.toml  README.md
shared/: README.md
shared/src/: lib.rs
syn-bencher/: Cargo.toml  README.md
syn-bencher/benches/: syn_benchmarks.rs
timings/: cargo-syn-partial.debug.html  using-no-parsing-full-syn.debug.html  using-no-parsing-full-syn.release.html  using-syb-full.release.html  using-syn-full.debug.html  using-syn-partial.release.html
using-no-parsing-full-syn/: Cargo.toml
using-no-parsing-full-syn/src/: lib.rs
using-no-parsing-full-syn/tests/: test_using_no_parsing_full_syn.rs
using-syn-full/: Cargo.toml  README.md
using-syn-partial/: Cargo.toml  README.md
using-syn-partial/src/: lib.rs
using-syn-partial/tests/: test_using_syn_partial.rs
