[package]
name = "syn-bencher"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
using-no-parsing-full-syn.workspace = true
using-syn-full.workspace = true
using-syn-partial.workspace = true
shared.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "syn_benchmarks"
harness = false